# ODIBEL

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  movie.conf  pom.xml  predicates.txt  pyproject.toml  pytest.ini  run_test.py  uris.txt
docs/: ARCHITECTURE.md  BACKEND_AND_FORMAT_DESIGN.md  Generate.md  LINKED_DATA_SOURCE.md  OPERATIONS_EXAMPLES.md  OPERATIONS_STRUCTURE_PROPOSAL.md  OPERATIONS_USABILITY_ANALYSIS.md  PACKAGE_STRUCTURE.md  RDF_OPS_MIGRATION_PLAN.md  WIKIDATA_INGESTION.md  api.md  index.md  rdf2.md
pyodibel/acquisition/: tojson.py
pyodibel/tests/: test_acqsimp.py
resources/: execute_post_fetch.sh  wikidata_externalID_properties
resources/dbpedia-multi-source-kg/: README.md  generate.py  generate_biology.py  generate_creativeworks.py  generate_events.py  generate_geography.py  generate_infrastructure.py  generate_organizations.py  generate_people.py  generate_politics.py  generate_science.py  generate_sports.py  generate_technology.py
resources/dbpedia-temporal/: README.md  model.md
resources/dexter-kg/: generate.py
resources/em-data-eval/: abt-buy.py
resources/examples/: dexter_kg_mapping.py  entity_resolution_benchset.py
resources/kgflex-eval/: README.md  dbpedia_fetcher.py  dbpedia_fetcher2.py  execute_post_fetch.sh  film_uris.txt  wikidata_fetcher.py
resources/movie-multi-source-kg/: .env  README.md  STRUCTURE.md  env.template  evaluate.py  generate.py  movie.conf
rm/: CHANGELOG.md  backend_registry.py  storage.py
rm/benchmark/: __init__.py
rm/partition/: __init__.py
rm/sparql/: wikidata_externalids.py
src/: example.conf  movie.conf
(+369 files in other folders)
